--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -4,6 +4,7 @@
 :root {
     --bg-primary: #DDE4F5;
     --bg-secondary: #CBCBDE;
+    --bg-transparent: #dde4f5b2;
     --bg-purple: #6228C2;
     --bg-blue: #1918E2;
     --bg-orange: #FF3214;
